--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -11,6 +11,102 @@ body {
     color: $black;
 }
 
+.guest-container {
+    height: 100%;
+    margin: 0;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    background-color: $gray;
+    .header-container {
+        width: 100%;
+        height: 8vh;
+        position: sticky;
+        background-color: $white;
+        text-align: center;
+        top: 0;
+        left: 0;
+        right: 0;
+        h1 {
+            height: 100%;
+            img {
+                padding: 10px 0;
+                margin: auto;
+                display: block;
+                height: 100%;
+            }
+        }
+    }
+    .footer-container {
+        width: 100%;
+        height: 8vh;
+        background-color: $white;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        .copyright {
+            text-align: center;
+        }
+    }
+    .guest-main-container {
+        flex: 1;
+        .margin-middle {
+            margin: 0 min(10vw, 50px);
+        }
+        .tool-title {
+            text-align: center;
+            margin: 10px 0;
+            font-weight: bold;
+            letter-spacing: 0.05em;
+        }
+        .white-box {
+            background-color: $white;
+            border-radius: 5px;
+            padding: 10px;
+            .input-box {
+                display: flex;
+                align-items: center;
+                margin-bottom: 8px;
+                label {
+                    width: 30%;
+                }
+                input {
+                    flex: 1;
+                }
+            }
+            @media (max-width: 480px) {
+                .input-box {
+                    flex-direction: column;
+                    align-items: stretch;
+                    margin-bottom: 8px;
+                    label {
+                        width: auto;
+                        margin-right: 0;
+                    }
+                }
+            }
+        }
+        .result-table {
+            background-color: $white;
+            border-radius: 5px;
+            width: 100%;
+            overflow-x: auto;
+            table-layout: auto;
+            thead {
+                border-bottom: 1px solid $font-gray;
+            }
+            button {
+                background-color: transparent;
+                color: $font-gray;
+                &:hover {
+                    transition: 0.3s;
+                    color: red;
+                }
+            }
+        }
+    }
+}
+
 .template-container {
     display: flex;
     background-color: $gray;
@@ -126,6 +222,10 @@ body {
     margin-bottom: 20px;
 }
 
+.margin-top-middle {
+    margin-top: 20px;
+}
+
 .center-element {
     display: flex;
     justify-content: center;
@@ -150,6 +250,7 @@ body {
 }
 
 // 汎用パーツ
+// 円グラフ
 .pie-chart-box {
     .pie-chart-wrapper {
         width: 100%;
@@ -221,6 +322,25 @@ body {
     }
 }
 
+// font
+p, label, button, table {
+    color: $font-gray;
+}
+
+// input
+input[type="text"], input[type="number"] {
+    border-radius: 5px;
+}
+
+// button
+button {
+    padding: 5px 0;
+    width: 100%;
+    background-color: $font-gray;
+    border-radius: 5px;
+    color: $white;
+}
+
 // PCレイアウト
 @media (min-width: 769px) {
     .sidebar {
@@ -263,6 +383,9 @@ body {
         .hamburger-button {
             height: 100%;
             font-size: 2rem;
+            background-color: transparent;
+            color: $font-gray;
+            width: auto;
         }
     }
     .template-container {
