--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -21,20 +21,47 @@ body {
     background-color: $gray;
     .header-container {
         width: 100%;
-        height: 8vh;
+        height: 60px;
         position: sticky;
-        background-color: $white;
-        text-align: center;
         top: 0;
         left: 0;
         right: 0;
         h1 {
             height: 100%;
-            img {
-                padding: 10px 0;
-                margin: auto;
-                display: block;
+            a {
+                display: inline-block;
                 height: 100%;
+                img {
+                    padding: 10px;
+                    height: 100%;
+                }
+            }
+        }
+    }
+    .hero-container {
+        .hero-img {
+            height: 50vh;
+            background-image: linear-gradient(rgba(255, 255, 255, 0.8),rgba(0, 0, 0, 0.9)), url("/public/sample.png");
+            background-size: cover;
+            position: relative;
+            .hero-info {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                .hero-logo {
+                    width: calc(200px + 5vw);
+                }
+            }
+            @media (max-width: 560px) {
+                .hero-info {
+                    display: block;
+                    .hero-logo {
+                        width: 60vw;
+                    }
+                    .auth-box {
+                        margin-top: 20px;
+                    }
+                }
             }
         }
     }
@@ -59,6 +86,23 @@ body {
             margin: 10px 0;
             font-weight: bold;
             letter-spacing: 0.05em;
+        }
+        .title-decoration {
+            align-items: center;
+            display: flex;
+            justify-content: center;
+            &::before, &::after {
+                background-color: $font-gray;
+                content: "";
+                height: 2px;
+                width: 60px;
+            }
+            &::before {
+                margin-right: 15px;
+            }
+            &::after {
+                margin-left: 15px;
+            }
         }
         .tool-grid {
             display: grid;
@@ -95,6 +139,13 @@ body {
                 input {
                     flex: 1;
                 }
+            }
+            a {
+                display: block;
+                padding: 10px;
+            }
+            &:has(a) {
+                padding: 0;
             }
             @media (max-width: 480px) {
                 .input-box {
@@ -230,6 +281,9 @@ body {
 .yellow {
     color: $yellow;
 }
+.white-font {
+    color: $white;
+}
 
 // 汎用スタイル
 .bold-font {
@@ -246,6 +300,10 @@ body {
 
 .margin-top-middle {
     margin-top: 20px;
+}
+
+.padding-middle {
+    padding: 20px;
 }
 
 .center-element {
@@ -269,6 +327,17 @@ body {
 
 .fill-remaining {
     flex-grow: 1;
+}
+
+.height-100 {
+    height: 100%;
+}
+
+.hover-shadow {
+    transition: 0.3s;
+    &:hover {
+        box-shadow: 0 10px 10px 0 rgba(0, 0, 0, 0.3);
+    }
 }
 
 // 汎用パーツ
@@ -345,8 +414,12 @@ body {
 }
 
 // font
-p, label, button, table {
+p, a, label, button, table, h2 {
     color: $font-gray;
+}
+
+.small-font {
+    font-size: 0.75em;
 }
 
 // input
